# tickline

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  SECURITY.md  justfile  tatus --short
.github/workflows/: ci.yml
build-sanitized/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tickline_version_tests
build-sanitized/Testing/Temporary/: CTestCostData.txt
cpp/fuzz/: protocol_parser_fuzz.cpp
cpp/include/tickline/: version.hpp
cpp/include/tickline/command/: authoritative_command_pipeline.hpp  command_envelope.hpp  command_evidence.hpp  command_evidence_archive.hpp  command_evidence_replay.hpp  command_session.hpp  command_validator.hpp
cpp/include/tickline/protocol/: authoritative_command_gateway.hpp  command_envelope_codec.hpp  frame.hpp  frame_parser.hpp  stream_parser.hpp
cpp/include/tickline/security/: sha256.hpp
cpp/include/tickline/simulation/: canonical_state.hpp  state_fingerprint.hpp  tick_clock.hpp  units.hpp  world.hpp
cpp/include/tickline/storage/: investigation_bundle_exporter.hpp  investigation_store.hpp
cpp/src/: version.cpp
cpp/src/command/: authoritative_command_pipeline.cpp  command_evidence.cpp  command_evidence_archive.cpp  command_evidence_replay.cpp  command_session.cpp  command_validator.cpp
cpp/src/protocol/: authoritative_command_gateway.cpp  command_envelope_codec.cpp  frame_parser.cpp  stream_parser.cpp
cpp/src/security/: sha256.cpp
cpp/src/simulation/: canonical_state.cpp  state_fingerprint.cpp  world.cpp
cpp/src/storage/: investigation_bundle_exporter.cpp  investigation_store.cpp
cpp/tests/: authoritative_command_gateway_tests.cpp  authoritative_command_pipeline_tests.cpp  canonical_state_tests.cpp  command_envelope_codec_tests.cpp  command_evidence_archive_tests.cpp  command_evidence_replay_tests.cpp  command_evidence_tests.cpp  command_session_tests.cpp  command_validator_tests.cpp  investigation_bundle_exporter_tests.cpp  investigation_store_tests.cpp  protocol_compatibility_tests.cpp  protocol_frame_parser_tests.cpp  protocol_fuzz_corpus_tests.cpp  protocol_stream_parser_tests.cpp  sha256_tests.cpp  simulation_units_tests.cpp  version_tests.cpp  world_tests.cpp
docs/: analytics.md  architecture.md  authoritative-command-pipeline.md  debugging-workflow.md  developer-console.md  evidence-integrity.md  github-workflow.md  investigation-storage.md  protocol-compatibility.md  protocol.md  release-process.md  simulation-model.md  threat-model.md  unity-forensic-viewer.md
docs/decisions/: 0001-go-developer-console.md
docs/releases/: v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md  v1.0.0.md
infra/docker/: Dockerfile  compose.yml
scripts/: build-tickline-dev.sh  check-docs.sh  check-local.sh  check-unity.sh  clean.sh  install-tickline-dev.sh  tickline-analytics.sh
scripts/checks/: cpp.sh  docker.sh  docs.sh  go.sh  manifest.tsv  python.sh  sanitizers.sh
tools/python/tests/: test_analysis_report.py  test_analytics.py  test_analytics_launcher.py  test_baseline.py  test_cli.py  test_investigation_bundle.py  test_package.py
tools/python/tickline_tools/: __init__.py  __main__.py  analysis_report.py  analytics.py  baseline.py  cli.py  investigation_bundle.py
tools/tickline-dev/: README.md  go.mod  go.sum
tools/tickline-dev/cmd/tickline-dev/: main.go
tools/tickline-dev/internal/artifactmanifest/: manifest.go  manifest_test.go
tools/tickline-dev/internal/artifactverify/: verify.go  verify_test.go
tools/tickline-dev/internal/cli/: artifact_manifest_test.go  artifacts.go  artifacts_command.go  artifacts_command_test.go  check.go  check_test.go  cli.go  cli_test.go  doctor.go  doctor_test.go  mode_test.go  result_artifact_test.go  workflow.go  workflow_run.go  workflow_run_test.go  workflow_test.go
tools/tickline-dev/internal/diagnostics/: diagnostics.go  diagnostics_test.go
tools/tickline-dev/internal/report/jsonreport/: artifact_manifest_path_test.go  report.go  report_test.go  result_path_test.go
tools/tickline-dev/internal/repository/: root.go  root_test.go
tools/tickline-dev/internal/runlog/: artifact_test.go  paths.go  paths_test.go  store.go  store_test.go
tools/tickline-dev/internal/runner/: model.go  process_linux.go  process_linux_test.go  process_other.go  runner.go  runner_test.go
tools/tickline-dev/internal/task/: manifest.go  model.go  plan.go  task_test.go
tools/tickline-dev/internal/tui/: model.go  model_test.go  run.go  view.go
tools/tickline-dev/internal/version/: version.go  version_test.go
tools/tickline-dev/internal/workflow/: catalog.go  catalog_test.go  model.go
tools/tickline-dev/tools/tickline-dev/internal/cli/: cli_test.go
tools/tickline-dev/tools/tickline-dev/internal/tui/: model.go  sanitize.go  view.go
tools/tickline-dev/tools/tickline-dev/internal/version/: version.go
unity/TicklineForensics/: .gitignore
unity/TicklineForensics/Assets/Tickline/Forensics/Editor/: InvestigationForensicViewerWindow.cs  InvestigationViewerController.cs  InvestigationViewerStyles.cs  Tickline.Forensics.Editor.asmdef
unity/TicklineForensics/Assets/Tickline/Forensics/Runtime/: BundleValidation.cs  InvestigationBundle.cs  InvestigationBundleLoader.cs  InvestigationBundleValidator.cs  InvestigationViewerSession.cs  InvestigationWorkspace.cs  ReplayPlaybackController.cs  ReplayTimeline.cs  Tickline.Forensics.asmdef
unity/TicklineForensics/Assets/Tickline/Forensics/Tests/EditMode/: InvestigationBundleLoaderTests.cs  InvestigationViewerControllerTests.cs  InvestigationViewerSessionTests.cs  InvestigationWorkspaceTests.cs  ReplayPlaybackControllerTests.cs  ReplayTimelineTests.cs  Tickline.Forensics.Tests.asmdef
unity/TicklineForensics/Assets/Tickline/Forensics/Tests/EditMode/Fixtures/: valid-investigation-bundle.json
